api-gateway-bff-pattern/gw/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: achernyavskiy0n/api-gateway:v1
          ports:
            - name: web
              containerPort: 8081
